git-svn-id: https://jvifm.svn.sourceforge.net/svnroot/jvifm/trunk@79 fca8e7a3-3947-0410-adac-e60ac8084ff7